--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 
-@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Mochiy+Pop+P+One&display=swap');
 
 * {
     padding: 0;
@@ -8,7 +8,7 @@
   }
 
 body {
-    font-family: 'Oswald', sans-serif;
+  font-family: 'Mochiy Pop P One', sans-serif;
   }
 
 .app {
